name:                figure1
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Sven Keidel
maintainer:          s.keidel@tudelft.nl
category:            Language
build-type:          Simple
extra-source-files:
cabal-version:       >=1.10

library
  ghc-options:       -Wall
  exposed-modules:   Concrete,
                     Abstract
  build-depends:     base,
                     sturdy-lib,
                     containers
  hs-source-dirs:    .
  default-language:  Haskell2010