name:                sturdy-jimple
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Wouter Raateland
maintainer:          wouterraateland@gmail.com
category:            Language
build-type:          Simple
extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Concrete,
                       Syntax
  ghc-options:         -Wall
  build-depends:       base,
                       containers,
                       hashable,
                       mtl,
                       random,
                       sturdy-lib,
                       text
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite specs
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       ConcreteSpec,
                       Classes.Object,
                       Classes.IllegalArgumentException,
                       Classes.FactorialExample
  build-depends:       base,
                       containers,
                       hspec,
                       hspec-core,
                       sturdy-lib,
                       sturdy-jimple,
                       text,
                       QuickCheck
  default-language:    Haskell2010
