name:                sturdy-lambda-adt
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Sven Keidel
maintainer:          s.keidel@tudelft.nl
category:            Language
build-type:          Simple
extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:   Language
  build-depends:     base,
                     containers,
                     unordered-containers,
                     hashable,
                     mtl,
                     sturdy-lib,
                     text,
                     transformers
  hs-source-dirs:    src
  default-language:  Haskell2010
