name:                sturdy-lambda-adt
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Sven Keidel
maintainer:          s.keidel@tudelft.nl
category:            Language
build-type:          Simple
extra-source-files:
cabal-version:       >=1.10

library
  ghc-options:       -Wall
  exposed-modules:   Shared,
                     Concrete
  build-depends:     base,
                     containers,
                     hashable,
                     mtl,
                     sturdy-lib,
                     text
  hs-source-dirs:    src
  default-language:  Haskell2010

test-suite specs
  type:              exitcode-stdio-1.0
  ghc-options:       -Wall
  hs-source-dirs:    test
  main-is:           Spec.hs
  build-depends:     base,
                     containers,
                     hspec,
                     sturdy-lambda-adt
  default-language:  Haskell2010

test-suite hlint
    build-depends:    base, hlint
    default-language: Haskell2010
    hs-source-dirs:   hlint
    main-is:          HLint.hs
    type:             exitcode-stdio-1.0
