name:           lambdajs
version:        0.1.0.0
description:    Please see the README on Github at <https://github.com/githubuser/lambdajs#readme>
homepage:       https://github.com/githubuser/lambdajs#readme
bug-reports:    https://github.com/githubuser/lambdajs/issues
author:         Author name here
maintainer:     example@example.com
license:        BSD3
build-type:     Simple
cabal-version:  >= 1.10

library
  ghc-options: -Wall
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , containers
    , sturdy-lib
    , hashable
    , parsec >= 3.0.0
    , language-ecmascript
    , syb >= 0.1
    , pretty >= 0.1
    , mtl >= 1.1.0.1
    , unordered-containers
    , split >= 0.2.3.3
  exposed-modules:
    Syntax
    Derivations
    SharedInterpreter
    TypeSemantics
    ConcreteSemantics
    Language.LambdaJS.Desugar
    Language.LambdaJS.ECMAEnvironment
    Language.LambdaJS.DesugarWith
    Language.LambdaJS.LiftFuncStmts
    Language.LambdaJS.PrettyPrint
    Language.LambdaJS.LocalVars
    Language.LambdaJS.Syntax
    Language.LambdaJS.RemoveHOAS
    Language.LambdaJS.AssignableVars
    Language.LambdaJS.Prelude
    Language.LambdaJS.Lexer
    Language.LambdaJS.Parser
  default-language: Haskell2010

test-suite lambdajs-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , lambdajs
    , hspec
    , containers
    , sturdy-lib
    , split >= 0.2.3.3
  other-modules:
    SharedSpec
    TypeSpec
  default-language: Haskell2010

executable lambdajs
  ghc-options: -Wall
  Main-Is: Main.hs
  Hs-Source-Dirs: src
  other-modules:
    Syntax
    Derivations
    SharedInterpreter
    TypeSemantics
    ConcreteSemantics
    Language.LambdaJS.Desugar
    Language.LambdaJS.ECMAEnvironment
    Language.LambdaJS.DesugarWith
    Language.LambdaJS.LiftFuncStmts
    Language.LambdaJS.PrettyPrint
    Language.LambdaJS.LocalVars
    Language.LambdaJS.Syntax
    Language.LambdaJS.RemoveHOAS
    Language.LambdaJS.AssignableVars
    Language.LambdaJS.Prelude
    Language.LambdaJS.Lexer
    Language.LambdaJS.Parser
  build-depends:
      base >=4.7 && <5
    , lambdajs
    , hashable
    , hspec
    , containers
    , sturdy-lib
    , language-ecmascript
    , parsec >= 3.0.0
    , mtl >= 1.1.0.1
    , syb >= 0.1
    , pretty >= 0.1
    , split >= 0.2.3.3