name:                sturdy-lib

version:             0.1.0.0

-- synopsis:            
description:         A library for abstract interpretation
license:             BSD3
license-file:        LICENSE
author:              Sven Keidel
maintainer:          svenkeidel@gmail.com
-- copyright:           
category:            Language
build-type:          Simple
extra-source-files:  
cabal-version:       >=1.10

flag trace
  Description: Enable tracing
  Default:     False

library
  if flag(trace) {
    ghc-options:         -Wall -DTRACE
  } else {
    ghc-options:         -Wall
  }
  exposed-modules:
                       Data.Boolean,
                       Data.GaloisConnection,
                       Data.Identifiable,
                       Data.Label,
                       Data.Order,
                       Data.Utils,
  
                       Data.Concrete.Boolean,
                       Data.Concrete.Environment,
                       Data.Concrete.Error,
                       Data.Concrete.Powerset,
                       Data.Concrete.Store,

                       Data.Abstract.Boolean,
                       Data.Abstract.Bounded,
                       Data.Abstract.Environment,
                       Data.Abstract.Error,
                       Data.Abstract.FreeCoCompletion,
                       Data.Abstract.FreeCompletion,
                       Data.Abstract.InfiniteNumbers,
                       Data.Abstract.Interval,
                       Data.Abstract.Powerset,
                       Data.Abstract.Sign,
                       Data.Abstract.Store,
                       Data.Abstract.Widening,

                       Control.Arrow.Debug,
                       Control.Arrow.Deduplicate,
                       Control.Arrow.Environment,
                       Control.Arrow.Fail,
                       Control.Arrow.Fix,
                       Control.Arrow.Reader,
                       Control.Arrow.Property,
                       Control.Arrow.State,
                       Control.Arrow.Store,
                       Control.Arrow.Try,
                       Control.Arrow.Utils

                       Control.Arrow.Abstract.Alloc,

                       Control.Arrow.Transformer.Property,
                       Control.Arrow.Transformer.Reader,
                       Control.Arrow.Transformer.State,

                       Control.Arrow.Transformer.Concrete.Environment,
                       Control.Arrow.Transformer.Concrete.Except,
                       Control.Arrow.Transformer.Concrete.Fix,
                       Control.Arrow.Transformer.Concrete.Store,

                       Control.Arrow.Transformer.Abstract.Environment,
                       Control.Arrow.Transformer.Abstract.Contour,
                       Control.Arrow.Transformer.Abstract.BoundedEnvironment,
                       Control.Arrow.Transformer.Abstract.Except,
                       Control.Arrow.Transformer.Abstract.Fix,
                       Control.Arrow.Transformer.Abstract.Powerset,
                       Control.Arrow.Transformer.Abstract.Store,
                       
                       -- TODO: delete
                       Control.Monad.Deduplicate,
                       Control.Monad.Try

  build-depends:       base,
                       containers,
                       hashable >= 1.2.5.0,
                       mtl,
                       numeric-limits,
                       text,
                       unordered-containers
  hs-source-dirs:      src/
  default-language:    Haskell2010

test-suite specs
  type:              exitcode-stdio-1.0
  ghc-options:       -Wall
  hs-source-dirs:    test
  main-is:           Spec.hs
  build-depends:     base,
                     hspec,
                     sturdy-lib,
                     hashable >= 1.2.5.0,
                     unordered-containers,
                     text
  default-language:  Haskell2010

 
