name:                sturdy-lib

version:             0.1.0.0

-- synopsis:
description:         A library for abstract interpretation
license:             BSD3
license-file:        LICENSE
author:              Sven Keidel
maintainer:          svenkeidel@gmail.com
-- copyright:
category:            Language
build-type:          Simple
extra-source-files:
cabal-version:       >=1.10

flag trace
  Description: Enable tracing
  Default:     False

library
  ghc-options:         -Wall
  if flag(trace) {
    cpp-options:       -DTRACE
  }
  exposed-modules:
                       Data.Boolean,
                       Data.Monoidal,
                       Data.GaloisConnection,
                       Data.Identifiable,
                       Data.Label,
                       Data.Numeric,
                       Data.Order,
                       Data.Utils,
                       Data.CallString,

                       Data.Concrete.Boolean,
                       Data.Concrete.Environment,
                       Data.Concrete.Error,
                       Data.Concrete.Powerset,
                       Data.Concrete.Store,

                       Data.Abstract.Equality,
                       Data.Abstract.Ordering,
                       Data.Abstract.Boolean,
                       Data.Abstract.Bounded,
                       Data.Abstract.Environment,
                       Data.Abstract.PropagateError,
                       Data.Abstract.HandleError,
                       Data.Abstract.Terminating,
                       Data.Abstract.InfiniteNumbers,
                       Data.Abstract.FreeCompletion,
                       Data.Abstract.FreeCoCompletion,
                       Data.Abstract.Interval,
                       Data.Abstract.Powerset,
                       Data.Abstract.Sign,
                       Data.Abstract.Store,
                       Data.Abstract.UncertainResult,
                       Data.Abstract.Widening,

                       Control.Arrow.Const,
                       Control.Arrow.Debug,
                       Control.Arrow.Deduplicate,
                       Control.Arrow.Environment,
                       Control.Arrow.Fail,
                       Control.Arrow.Except,
                       Control.Arrow.Fix,
                       Control.Arrow.Lift,
                       Control.Arrow.Reader,
                       Control.Arrow.Effect,
                       Control.Arrow.State,
                       Control.Arrow.Store,
                       Control.Arrow.Writer,
                       Control.Arrow.Utils,

                       Control.Arrow.Abstract.Alloc,
                       Control.Arrow.Abstract.Join,

                       Control.Arrow.Transformer.Reader,
                       Control.Arrow.Transformer.State,
                       Control.Arrow.Transformer.Writer,
                       Control.Arrow.Transformer.Const,
                       Control.Arrow.Transformer.Static,
                       Control.Arrow.Transformer.BackwardState,
                       Control.Arrow.Transformer.GreatestFixPoint,
                       Control.Arrow.Transformer.ForwardAnalysis,
                       Control.Arrow.Transformer.BackwardAnalysis,

                       Control.Arrow.Transformer.Concrete.Environment,
                       Control.Arrow.Transformer.Concrete.Except,
                       Control.Arrow.Transformer.Concrete.LeastFixPoint,
                       Control.Arrow.Transformer.Concrete.Store,

                       Control.Arrow.Transformer.Abstract.Completion,
                       Control.Arrow.Transformer.Abstract.Environment,
                       Control.Arrow.Transformer.Abstract.Contour,
                       Control.Arrow.Transformer.Abstract.BoundedEnvironment,
                       Control.Arrow.Transformer.Abstract.PropagateExcept,
                       Control.Arrow.Transformer.Abstract.HandleExcept,
                       Control.Arrow.Transformer.Abstract.LeastFixPoint,
                       Control.Arrow.Transformer.Abstract.Powerset,
                       Control.Arrow.Transformer.Abstract.Store,
                       -- Control.Arrow.Transformer.Abstract.LiveVariables,
                       Control.Arrow.Transformer.Abstract.ReachingDefinitions
                       -- Control.Arrow.Transformer.Abstract.Uncertain
  other-modules:       Control.Arrow.Transformer.Effect
  build-depends:       base,
                       containers,
                       hashable,
                       mtl,
                       text,
                       unordered-containers
  hs-source-dirs:      src/
  default-language:    Haskell2010

test-suite specs
  type:              exitcode-stdio-1.0
  ghc-options:       -Wall
  hs-source-dirs:    test
  main-is:           Spec.hs
  build-depends:     base,
                     hspec,
                     sturdy-lib,
                     hashable,
                     unordered-containers,
                     text
  other-modules:     BoundedEnvironmentSpec,
                     FixSpec
  default-language:  Haskell2010
