name:                sturdy-lib

version:             0.1.0.0

-- synopsis:
description:         A library for abstract interpretation
license:             BSD3
license-file:        LICENSE
author:              Sven Keidel
maintainer:          svenkeidel@gmail.com
-- copyright:
category:            Language
build-type:          Simple
extra-source-files:
cabal-version:       >=1.10

flag trace
  Description: Enable tracing
  Default:     False

library
  ghc-options:         -Wall
  if flag(trace) {
    cpp-options:       -DTRACE
  }
  exposed-modules:
                       Data.Boolean,
                       Data.Monoidal,
                       Data.GaloisConnection,
                       Data.Soundness,
                       Data.Identifiable,
                       Data.Label,
                       Data.Numeric,
                       Data.Order,
                       Data.Utils,
                       Data.CallString,

                       Data.Concrete.Boolean,
                       Data.Concrete.Error,
                       Data.Concrete.Failure,
                       Data.Concrete.Powerset,

                       Data.Abstract.Either,
                       Data.Abstract.Equality,
                       Data.Abstract.Ordering,
                       Data.Abstract.Boolean,
                       Data.Abstract.Failure,
                       Data.Abstract.Error,
                       Data.Abstract.InfiniteNumbers,
                       Data.Abstract.FiniteMap,
                       Data.Abstract.FreeCompletion,
                       Data.Abstract.Interval,
                       Data.Abstract.Maybe,
                       Data.Abstract.Powerset,
                       Data.Abstract.DiscretePowerset,
                       Data.Abstract.Sign,
                       Data.Abstract.Map,
                       Data.Abstract.Terminating,
                       Data.Abstract.There,
                       Data.Abstract.Widening,
                       Data.Abstract.StackWidening,

                       Control.Arrow.Alloc,
                       Control.Arrow.Const,
                       Control.Arrow.Conditional,
                       Control.Arrow.Deduplicate,
                       Control.Arrow.Environment,
                       Control.Arrow.Fail,
                       Control.Arrow.Except,
                       Control.Arrow.Fix,
                       Control.Arrow.Random,
                       Control.Arrow.Reader,
                       Control.Arrow.State,
                       Control.Arrow.Store,
                       Control.Arrow.Trans,
                       Control.Arrow.Writer,
                       Control.Arrow.Utils,

                       Control.Arrow.Abstract.Join,

                       Control.Arrow.Transformer.Reader,
                       Control.Arrow.Transformer.State,
                       Control.Arrow.Transformer.Writer,
                       Control.Arrow.Transformer.Cont,
                       Control.Arrow.Transformer.Const,
                       Control.Arrow.Transformer.Static,
                       Control.Arrow.Transformer.Compose,

                       Control.Arrow.Transformer.Concrete.Environment,
                       Control.Arrow.Transformer.Concrete.Except,
                       Control.Arrow.Transformer.Concrete.Failure,
                       Control.Arrow.Transformer.Concrete.Fixpoint,
                       Control.Arrow.Transformer.Concrete.Store,
                       Control.Arrow.Transformer.Concrete.Random,
                       Control.Arrow.Transformer.Concrete.Trace,

                       Control.Arrow.Transformer.Abstract.Completion,
                       Control.Arrow.Transformer.Abstract.Environment,
                       Control.Arrow.Transformer.Abstract.Contour,
                       Control.Arrow.Transformer.Abstract.BoundedEnvironment,
                       Control.Arrow.Transformer.Abstract.Failure,
                       Control.Arrow.Transformer.Abstract.Except,
                       -- Control.Arrow.Transformer.Abstract.GreatestFixPoint,
                       Control.Arrow.Transformer.Abstract.Fixpoint,
                       Control.Arrow.Transformer.Abstract.Powerset,
                       Control.Arrow.Transformer.Abstract.Store,
                       Control.Arrow.Transformer.Abstract.ReachingDefinitions
                       -- Control.Arrow.Transformer.Abstract.LiveVariables

  build-depends:       base,
                       containers,
                       hashable,
                       mtl,
                       random,
                       text,
                       unordered-containers
  hs-source-dirs:      src/
  default-language:    Haskell2010

test-suite specs
  type:              exitcode-stdio-1.0
  ghc-options:       -Wall
  hs-source-dirs:    test
  main-is:           Spec.hs
  build-depends:     base,
                     hspec,
                     sturdy-lib,
                     hashable,
                     unordered-containers,
                     text
  other-modules:     FiniteMapSpec,
                     FixSpec,
                     MapSpec,
                     TraceSpec
  default-language:  Haskell2010
