name:                sturdy-pcf
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Sven Keidel
maintainer:          s.keidel@tudelft.nl
category:            Language
build-type:          Simple
extra-source-files:
cabal-version:       >=1.10

library
  ghc-options:       -Wall
  exposed-modules:   Syntax,
                     SharedSemantics,
                     ConcreteSemantics,
                     IntervalAnalysis
                     -- SignAnalysis
  build-depends:     base,
                     hashable,
                     mtl,
                     sturdy-lib,
                     text,
                     transformers,
                     unordered-containers
  hs-source-dirs:    src
  default-language:  Haskell2010

test-suite specs
  type:              exitcode-stdio-1.0
  ghc-options:       -Wall
  hs-source-dirs:    test
  main-is:           Spec.hs
  other-modules:     ConcreteSpec,
                     IntervalAnalysisSpec,
                     SignAnalysisSpec,
                     SharedSpecs
  build-depends:     base,
                     hspec,
                     mtl,
                     sturdy-lib,
                     sturdy-pcf,
                     unordered-containers,
                     text
  default-language:  Haskell2010
