name:                sturdy-stratego
version:             0.3.0.0
synopsis:            Abstract Interpreter for Stratego
license:             BSD3
author:              Sven Keidel
maintainer:          s.keidel@tudelft.nl
copyright:           Copyright (c) 2017, Sven Keidel
category:            Language
build-type:          Simple
cabal-version:       >=1.20

data-files:          case-studies/arrows/arrows.aterm,
                     case-studies/pcf/pcf.aterm,
                     case-studies/arith/arith.aterm,
                     case-studies/cca/cca.aterm,
                     case-studies/go2js/go2js.aterm

library
  ghc-options:         -Wall
                       -O2
                       -fprof-auto
  exposed-modules:     Data.ATerm,
                       Data.Constructor,
                       Data.Term,
                       Syntax,
                       Signature,
                       Utils,
                       SubtypeRelation,
                       Sort,
                       SharedSemantics,
                       ConcreteSemantics,
                       WildcardSemantics,
                       GrammarSemantics,
                       SortSemantics,
                       Soundness,
                       Paths_sturdy_stratego
  build-depends:       attoparsec,
                       base,
                       containers,
                       deepseq,
                       fgl,
                       hashable,
                       mtl,
                       sturdy-lib,
                       text,
                       transformers,
                       tree-automata,
                       unordered-containers,
                       QuickCheck
  hs-source-dirs:      src
  default-language:    Haskell2010

Executable case-studies
  ghc-options:         -Wall
  Build-Depends:       base,
                       criterion,
                       pretty,
                       sturdy-lib,
                       sturdy-stratego,
                       text,
                       unordered-containers
  hs-source-dirs:      case-studies
  main-is:             Main.hs
  other-modules:       Pretty.Haskell,
                       Pretty.Results,
                       Pretty.JavaScript,
                       Pretty.PCF
                       Paths_sturdy_stratego
  default-language:    Haskell2010

test-suite specs
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall
  hs-source-dirs:      test, case-studies
  main-is:             Spec.hs
  build-depends:       base,
                       containers,
                       hspec,
                       mtl,
                       pretty,
                       sturdy-lib,
                       sturdy-stratego,
                       text,
                       tree-automata,
                       unordered-containers,
                       QuickCheck
  other-modules:       Pretty.Haskell,
                       Pretty.Results,
                       AbstractTypedSemanticsSpec,
                       ConcreteSemanticsSpec,
                       GrammarSemanticsSpec,
                       OrderSpec,
                       SubtypingSpec,
                       WildcardSemanticsSpec
  default-language:    Haskell2010
